package model;

public class Ladder extends Jump {

    public Ladder(int start, int end) {
        super(start, end);
    }
}