package model;

public class Snake extends Jump {

    public Snake(int head, int tail) {
        super(head, tail);
    }
}